--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
   <body>
     <header class="header">
       <div class="header__background-image"></div>
-      <h1 class="translation">Elizaveta Kucherova</h1>
-      <h2>Frontend Developer</h2>
+      <h1 class="translation"></h1>
+      <h2>Front-end Developer</h2>
+      <div class="center-con">
+        <div class="round">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
     </header>
     <nav class="nav-bar">
       <button class="toggle-button">
@@ -30,39 +38,37 @@
       <ul class="nav-bar__items">
         <li class="nav-bar__item">
           <a href="#about">
-            <p class="translation">About me</p>
+            <p class="translation"></p>
           </a>
         </li>
         <li class="nav-bar__item">
           <a href="#technologies">
-            <p class="translation">Technologies</p>
+            <p class="translation"></p>
           </a>
         </li>
         <li class="nav-bar__item">
           <a href="#certificates">
-            <p class="translation">Certificates</p>
+            <p class="translation"></p>
           </a>
         </li>
         <li class="nav-bar__item">
           <a href="#projects">
-            <p class="translation">Projects</p>
+            <p class="translation"></p>
           </a>
         </li>
         <li class="nav-bar__item">
           <a href="#contacts">
-            <p class="translation">Contacts</p>
+            <p class="translation"></p>
           </a>
         </li>
         <li class="nav-bar__item-button">
-          <button id="change-language" class="translation">
-            Изменить язык
-          </button>
+          <button id="change-language" class="translation"></button>
         </li>
       </ul>
     </nav>
     <main>
       <section id="about">
-        <h2 class="section-title translation">About me</h2>
+        <h2 class="section-title translation"></h2>
         <div class="about__container">
           <div class="photo-border">
             <img
@@ -73,53 +79,29 @@
           </div>
           <div class="about__text-section">
             <p>
-              <span class="translation"
-                >Hi, I'm a self-taught frontend developer from Moscow. Interest
-                in technology, the desire to create and the need to make a
-                website in the past, led me to the world of web development. My
-                path into web began in 2018, when I decided to start studying at
-                Mail.ru courses,
-              </span>
+              <span class="translation"> </span>
               <a
                 target="_blank"
                 rel="noopener noreferrer"
                 href="https://geekbrains.ru/"
                 >GeekBrains</a
-              >.
-              <span class="translation"
-                >Soon after that, I started to work alone at some of my
-                projects.</span
-              ><br /><br />
-              <span class="translation"
-                >I have solid knowledge about responsive web design and
-                client-side scripting, like vanilla js. Also, I like to work
-                with React.</span
-              ><br /><br />
-              <span class="translation"
-                >In the nearest future I plan to study Node.js, for building
-                backend, and continue to learn new stuff at JavaScript and
-                CSS.</span
-              ><br /><br />
-              <span class="translation"
-                >In my free time you can find me practice at coding (I can work
-                on some of my pet-projects or take challenge at
-              </span>
+              >. <span class="translation"></span><br /><br />
+              <span class="translation"></span><br /><br />
+              <span class="translation"></span><br /><br />
+              <span class="translation"> </span>
               <a
                 target="_blank"
                 rel="noopener noreferrer"
                 href="https://www.codewars.com/users/kucherLiz"
                 >Codewars</a
               >
-              <span class="translation"
-                >), or do sport, or play video games.</span
-              >
+              <span class="translation"></span>
             </p>
           </div>
         </div>
       </section>
       <section id="technologies">
-        <h2 class="section-title translation">Technologies</h2>
-        <!-- <h2 class="section-title">Стек технологий</h2> -->
+        <h2 class="section-title translation"></h2>
         <ul class="technologies__list">
           <li class="technologies__item">
             <img
@@ -158,7 +140,7 @@
         </ul>
       </section>
       <section id="certificates">
-        <h2 class="section-title translation">Certificates</h2>
+        <h2 class="section-title translation"></h2>
         <ul class="certificates__gallery">
           <li class="certificates__gallery--item">
             <a
@@ -171,9 +153,7 @@
                   src="./assets/certificates/FreeCodeCamp.Responsive_web_design.png"
                   alt="FreeCodeCamp.Responsive_web_design"
                 />
-                <figcaption class="translation">
-                  FreeCodeCamp сourse сertificate. Responsive web design.
-                </figcaption>
+                <figcaption class="translation"></figcaption>
               </figure>
             </a>
           </li>
@@ -188,10 +168,7 @@
                   src="./assets/certificates/FreeCodeCamp.JavaScript_algorithms_and_data_structures.png"
                   alt="FreeCodeCamp.JavaScript_algorithms_and_data_structures"
                 />
-                <figcaption class="translation">
-                  FreeCodeCamp сourse сertificate. JavaScript algorithms and
-                  data structures.
-                </figcaption>
+                <figcaption class="translation"></figcaption>
               </figure>
             </a>
           </li>
@@ -206,9 +183,7 @@
                   src="./assets/certificates/GeekBrains.Окончание_курса.HTML&CSS.png"
                   alt="GeekBrains.Окончание курса.HTML&CSS"
                 />
-                <figcaption class="translation">
-                  GeekBrains сourse сertificate. HTML&CSS.
-                </figcaption>
+                <figcaption class="translation"></figcaption>
               </figure>
             </a>
           </li>
@@ -223,10 +198,7 @@
                   src="./assets/certificates/GeekBrains.Окончание_курса.Алгоритмы_и_струтуры_данных_на_PHP.png"
                   alt="GeekBrains.Окончание_курса.Алгоритмы_и_струтуры_данных_на_PHP"
                 />
-                <figcaption class="translation">
-                  GeekBrains сourse сertificate. PHP algorithms and data
-                  structures.
-                </figcaption>
+                <figcaption class="translation"></figcaption>
               </figure>
             </a>
           </li>
@@ -241,9 +213,7 @@
                   src="./assets/certificates/GeekBrains.Окончание_курса.Базовый_курс_JavaScript.png"
                   alt="GeekBrains.Окончание_курса.Базовый_курс_JavaScript"
                 />
-                <figcaption class="translation">
-                  GeekBrains сourse сertificate. Basic JavaScript.
-                </figcaption>
+                <figcaption class="translation"></figcaption>
               </figure>
             </a>
           </li>
@@ -258,9 +228,7 @@
                   src="./assets/certificates/GeekBrains.Окончание_курса.Введение_в_Git.png"
                   alt="GeekBrains.Окончание_курса.Введение_в_Git"
                 />
-                <figcaption class="translation">
-                  GeekBrains сourse сertificate. Introduction to Git.
-                </figcaption>
+                <figcaption class="translation"></figcaption>
               </figure>
             </a>
           </li>
@@ -275,9 +243,7 @@
                   src="./assets/certificates/GeekBrains.Окончание_курса.Командная_разработка.png"
                   alt="GeekBrains.Окончание_курса.Командная_разработка"
                 />
-                <figcaption class="translation">
-                  GeekBrains сourse сertificate. Team development.
-                </figcaption>
+                <figcaption class="translation"></figcaption>
               </figure>
             </a>
           </li>
@@ -292,9 +258,7 @@
                   src="./assets/certificates/GeekBrains.Окончание_курса.Компьютерные_сети.png"
                   alt="GeekBrains.Окончание_курса.Компьютерные_сети"
                 />
-                <figcaption class="translation">
-                  GeekBrains сourse сertificate. Computer networks.
-                </figcaption>
+                <figcaption class="translation"></figcaption>
               </figure>
             </a>
           </li>
@@ -309,9 +273,7 @@
                   src="./assets/certificates/GeekBrains.Окончание_курса.Профессиональная_верстка.png"
                   alt="GeekBrains.Окончание_курса.Профессиональная_верстка"
                 />
-                <figcaption class="translation">
-                  GeekBrains сourse сertificate. Professional layout.
-                </figcaption>
+                <figcaption class="translation"></figcaption>
               </figure>
             </a>
           </li>
@@ -326,9 +288,7 @@
                   src="./assets/certificates/GeekBrains.Тестирование.HTML&CSS.Сложный_уровень.png"
                   alt="GeekBrains.Тестирование.HTML&CSS.Сложный_уровень"
                 />
-                <figcaption class="translation">
-                  GeekBrains test сertificate. HTML&CSS. Hard level.
-                </figcaption>
+                <figcaption class="translation"></figcaption>
               </figure>
             </a>
           </li>
@@ -343,16 +303,14 @@
                   src="./assets/certificates/GeekBrains.Тестирование.JavaScript.Начальный_уровень.png"
                   alt="GeekBrains.Тестирование.JavaScript.Начальный_уровень"
                 />
-                <figcaption class="translation">
-                  GeekBrains test сertificate. JavaScript basic.
-                </figcaption>
+                <figcaption class="translation"></figcaption>
               </figure>
             </a>
           </li>
         </ul>
       </section>
       <section id="projects">
-        <h2 class="section-title translation">Projects</h2>
+        <h2 class="section-title translation"></h2>
         <div class="project">
           <a
             target="_blank"
@@ -368,11 +326,7 @@
             <div class="project__about">
               <h3 class="project__title">Restaurant</h3>
               <p class="project__description">
-                <span class="translation"
-                  >It's a fully responsive web application made for educational
-                  purpouses. The primary technologies involved in this project
-                  include HTML5, CSS3, Sass and vanilla js.</span
-                >
+                <span class="translation"></span>
               </p>
             </div>
           </a>
@@ -409,13 +363,7 @@
             />
             <div class="project__about">
               <h3 class="project__title">ToDo List</h3>
-              <p class="project__description translation">
-                ToDo List is a web application similar to any todo list. Users
-                can create tasks, delete them, and mark completed. Also, users
-                can check comlited tasks. The app was created using React.
-                Authorisation and storage data was made with Firebase. In app
-                was also used Sass and React Router library.
-              </p>
+              <p class="project__description translation"></p>
             </div>
           </a>
           <div class="project__links">
@@ -452,30 +400,9 @@
             <div class="project__about">
               <h3 class="project__title">GameSearch</h3>
               <p class="project__description">
-                <span class="translation"
-                  >GameSearch is a web application, made for searching and
-                  saving different games. Users can filter games by genres,
-                  platforms, rating or popularity. Or just filter by title. On
-                  the top of main page randomly loading some game, with high
-                  rating and popularity. On the bottom - a list of games, with
-                  high popularity (In future I plan to write an algorithm, which
-                  would recommend users games, according to their taste). User
-                  can click on any game, and get a lot of information about it.
-                  When user signs up, new functions are opened for him, such as
-                  - rating games from 1 to 5, and adding them to folders.
-                  Folders can also be created independently. On the profile
-                  page, user can also change the photo and login.</span
-                ><br /><br />
-                <span class="translation"
-                  >This application made with IGDB API. Also, I was faced with
-                  the need to add proxy on Heroku, for cors-policy. This leads
-                  to long page loads and restriction on requests. So, I'm sorry
-                  for inconveniences. For now I still working on these
-                  problems.</span
-                ><br /><br />
-                <span class="translation"
-                  >To build this app I used React, Redux, and Firebase.</span
-                >
+                <span class="translation"></span><br /><br />
+                <span class="translation"></span><br /><br />
+                <span class="translation"></span>
               </p>
             </div>
           </a>
@@ -542,7 +469,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p>2020 | <span class="translation">Elizaveta Kucherova</span></p>
+      <p>2020 | <span class="translation"></span></p>
     </footer>
     <script src="./shared.js"></script>
   </body>
