added bottom animated arrow and prefixes

--- a/index.html
+++ b/index.html
@@ -19,17 +19,15 @@
     <header class="header">
       <div class="header__background-image"></div>
       <h1 class="translation"></h1>
-      <h2>Front-end Developer</h2>
-      <div class="center-con">
-        <div class="round">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </div>
+      <h2>Frontend Developer</h2>
+      <a class="round" href="#navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>
     </header>
-    <nav class="nav-bar">
+    <nav class="nav-bar" id="navigation">
       <button class="toggle-button">
         <span class="toggle-button__bar"></span>
         <span class="toggle-button__bar"></span>
@@ -400,6 +398,7 @@
             <div class="project__about">
               <h3 class="project__title">GameSearch</h3>
               <p class="project__description">
+                <span class="translation"></span><br /><br />
                 <span class="translation"></span><br /><br />
                 <span class="translation"></span><br /><br />
                 <span class="translation"></span>
