--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="header">
       <div class="header__background-image"></div>
-      <h1 class="translation"></h1>
+      <h1 class="translation">Елизавета Кучерова</h1>
       <h2>Frontend Developer</h2>
       <a class="round" href="#navigation">
         <span></span>
@@ -66,7 +66,7 @@
     </nav>
     <main>
       <section id="about">
-        <h2 class="section-title translation"></h2>
+        <h2 class="section-title translation">Обо мне</h2>
         <div class="about__container">
           <div class="photo-border">
             <img
@@ -77,7 +77,7 @@
           </div>
           <div class="about__text-section">
             <p>
-              <span class="translation"> </span>
+              <span class="translation"></span>
               <a
                 target="_blank"
                 rel="noopener noreferrer"
@@ -95,11 +95,19 @@
               >
               <span class="translation"></span>
             </p>
+            <a
+              class="translation resume"
+              target="_blank"
+              rel="noopener noreferrer"
+              href="./assets/resume.pdf"
+            >
+              Скачать резюме
+            </a>
           </div>
         </div>
       </section>
       <section id="technologies">
-        <h2 class="section-title translation"></h2>
+        <h2 class="section-title translation">Стек технологий</h2>
         <ul class="technologies__list">
           <li class="technologies__item">
             <img
@@ -138,7 +146,7 @@
         </ul>
       </section>
       <section id="certificates">
-        <h2 class="section-title translation"></h2>
+        <h2 class="section-title translation">Сертификаты</h2>
         <ul class="certificates__gallery">
           <li class="certificates__gallery--item">
             <a
@@ -308,7 +316,7 @@
         </ul>
       </section>
       <section id="projects">
-        <h2 class="section-title translation"></h2>
+        <h2 class="section-title translation">Проекты</h2>
         <div class="project">
           <a
             target="_blank"
@@ -426,16 +434,16 @@
         </div>
       </section>
       <section id="contacts">
-        <h2 class="section-title translation">Contacts</h2>
+        <h2 class="section-title translation">Контакты</h2>
         <ul class="contacts__links">
-          <li class="contact__link">
+          <!-- <li class="contact__link">
             <a
               target="_blank"
               rel="noopener noreferrer"
               href="https://linkedin.com/in/elizaveta-kucherova-4808181ab"
               ><img src="./assets/icons/Linkedin.svg" alt="linkedin-logo"
             /></a>
-          </li>
+          </li> -->
           <li class="contact__link">
             <a
               target="_blank"
@@ -465,6 +473,14 @@
             /></a>
           </li>
         </ul>
+        <a
+          class="translation resume"
+          target="_blank"
+          rel="noopener noreferrer"
+          href="./assets/resume.pdf"
+        >
+          Скачать резюме
+        </a>
       </section>
     </main>
     <footer class="footer">
