added comments and changed resume file

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </a>
         </li>
         <li class="nav-bar__item-button">
-          <button id="change-language" class="translation"></button>
+          <button class="translation change-language"></button>
         </li>
       </ul>
     </nav>
